# mse-ai

./: .gitignore  README.md  pyproject.toml
mse_ai/: __init__.py  baseline.py  baseline_demo.py  main.py  signal.py  signal_demo.py  strategy.py  substrate.py
tests/: test_smoke.py
